fix(data-display): prevent long label & value from content overflowing (#1720)

--- a/projects/ng-aquila/src/data-display/data-display-label/data-display-label.component.scss
+++ b/projects/ng-aquila/src/data-display/data-display-label/data-display-label.component.scss
@@ -3,4 +3,5 @@
 :host {
   display: block;
   font-weight: v(data-display-label-font-weight);
+  overflow-wrap: break-word;
 }
