--- a/projects/ng-aquila/src/data-display/data-display/data-display.component.scss
+++ b/projects/ng-aquila/src/data-display/data-display/data-display.component.scss
@@ -4,6 +4,10 @@
   display: flex;
   flex-direction: column;
 
+  .nx-data-display__value {
+    overflow-wrap: break-word;
+  }
+
   &.is-horizontal {
     flex-direction: row;
 
